[metadata]
name = sqlalchemy-mutable
version = 0.0.13
author = Dillon Bowen
author_email = dsbowen@wharton.upenn.edu
description = A powerful and flexible sqlalchemy database type for nested mutation tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dsbowen.github.io/sqlalchemy-mutable
project_urls = 
    Repository = https://github.com/dsbowen/sqlalchemy-mutable
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    sqlalchemy >= 1.3.12